# gvm-tools

./: .bandit  .coveragerc  .dockerignore  .gitignore  .hgignore  .hgtags  .pylintrc  CHANGELOG.md  CHANGELOG.rst  MANIFEST.in  Pipfile  README.md  README.rst  RELEASE.md  bwi  gmp.py  gvm-cli.py  gvm-pyshell.py  gvm_connection.py  monthly-report.gmp  mypy.ini  pyproject.toml  requirements.txt  setup.py  verify-scanners.gmp.py
.circleci/: config.yml
.docker/: Dockerfile  entrypoint.sh
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: auto-merge.yml  changelog.yml  ci-python.yml  codeql-analysis-python.yml  container.yml  conventional-commits.yml  dependency-review.yml  deploy-pypi.yml  github-pages.yml  push.yml  release-pontos-manually.yml  release-pontos.yml  release.yml  sbom-upload.yml
changelog/: v21.10.0.md  v22.6.0.md  v22.6.1.md  v22.9.0.md  v23.2.0.md
clients/: gvm_cli.py  gvm_pyshell.py
docs/: Makefile  api.rst  conf.py  config.md  config.rst  connectiontypes.md  connectiontypes.rst  glossary.md  glossary.rst  index.md  index.rst  install.md  install.rst  scripting.md  scripting.rst  tools.md  tools.rst
docs/_static/: custom.css
docs/_templates/: sidebarlogo.html
gmp/: __init__.py  connection.py  connections.py  error.py  gmp.py  gvm_connection.py  helper.py  transform.py  transforms.py  xml.py
gmp/clients/: cli.py  gvm_cli.py  gvm_dialog.py  gvm_pyshell.py  helper.py  pyshell.py
gmp/protocol/: v7.py
gmp/protocols/: __init__.py  base.py  gmpv7.py  latest.py  ospv1.py
gsa/: nvtscan.js
gvmtools/: __init__.py  __version__.py  cli.py  config.py  helper.py  parser.py  pyshell.py  script.py  script_utils.py  version.py
libs/: gmp.py  gvm_connection.py
scripts/: .pylintrc  README.md  SyncAssets.gmp  SyncReports.gmp  USAGE.md  application-detection.gmp  application-detection.gmp.py  autopilot.gmp  bulk-modify-schedules.gmp.py  certbund-report.gmp.py  cfg-gen-for-certs.gmp  cfg-gen-for-certs.gmp.py  check-gmp-gos22.04.gmp.py  check-gmp-gos24.10.gmp.py  check-gmp.gmp  check-gmp.gmp.py  check_gmp.gmp  clean-sensor.gmp  clean-sensor.gmp.py  clean-slave.gmp  combine-reports.gmp  combine-reports.gmp.py  create-alerts-from-csv.gmp.py  create-consolidated-report.gmp.py  create-credentials-from-csv.gmp.py  create-cve-report-from-json.gmp.py  create-dummy-data.gmp  create-dummy-data.gmp.py  create-filters-from-csv.gmp.py  create-monthly-report.gmp.py  create-report-format-from-csv.gmp.py  create-schedules-from-csv.gmp.py  create-tags-from-csv.gmp.py  create-tags.gmp  create-targets-from-csv.gmp.py  create-targets-from-host-list.gmp  create-targets-from-host-list.gmp.py  create-tasks-from-csv.gmp.py  create_cve_report_from_json.gmp.py  create_targets_from_host_list.gmp  (+84 more)
tests/: __init__.py  gmp_unittest.py  gvm-cli_test.py  gvm_unittest.py  root_help.3.10.snap  root_help.snap  socket_help.3.10.snap  socket_help.snap  ssh_help.3.10.snap  ssh_help.snap  test.cfg  test_auth.cfg  test_config.py  test_gmp_create_filter.py  test_gmp_create_report.py  test_gmp_create_target.py  test_gmp_create_task.py  test_gmp_protocol.py  test_helper.py  test_parser.py  test_script_utils.py  tls_help.3.10.snap  tls_help.snap
tests/connectiontests/: gmp_unittest.py
tests/scripts/: __init__.py  example_schedules.xml  example_target.xml  example_task.xml  get_alerts.xml  get_configs.xml  get_scan_configs.xml  invalid_xml.xml  test_combine_reports.py  test_create_consolidated_report.py  test_list_tasks.py  test_send_schedules.py  test_send_targets.py  test_send_tasks.py  test_start_alert_scan.py
tests/xml/: test_xml_command.py
